Fixed team members spacing on mobile

--- a/css/team.css
+++ b/css/team.css
@@ -19,6 +19,10 @@ body {
     h1 {
         text-align: center;
     }
+
+    h5 {
+        margin-bottom: 35px;
+    }
 }
 
 footer {
